# kubernetes-image-updater

./: Dockerfile  README.md  controller.py  index.yaml  pyproject.toml
.github/workflows/: publish.yml  release-charts.yml
charts/kubernetes-image-updater/: Chart.yaml  values.yaml
charts/kubernetes-image-updater/templates/: deployment.yaml  rbac.yaml
docs/: spec.md
examples/: demo-deployment.yaml
tests/: conftest.py  test_container_selector.py  test_domain.py  test_image_registry_basic.py  test_reconciler_simple.py
